Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28267

Creator can't parse CMake version at first

    XMLWordPrintable

Details

    • 6936f23328 (qt-creator/qt-creator/9.0) 6936f23328 (qt-creator/qt-creator/master) 6936f23328 (qt-creator/qt-creator/qds/dev)

    Description

      1. Go to "Edit" -> "Preferences..." -> "CMake" -> "Tools".
      2. Add cmake from the Qt Online Installer's Tools directory.
        Instead of a proper version number, the dialog reads "Version not parseable":
      3. Unselect the new CMake tool, e.g. by selecting a different, autodetected CMake tool.
      4. Unselect the new CMake tool again.
        The dialog displays the correct version number.

      This version number should already be displayed after step 2.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            madwinter Marcus Tillmanns
            rlohning Robert Löhning
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes